--- a/app/Resources/views/layout/header.html.twig
+++ b/app/Resources/views/layout/header.html.twig
@@ -44,11 +44,9 @@
                     <div id="logo">								
                         <a href="{{ path('homepage') }}" title="{{ get_setting('siteName') }}">
                             <img
-                                loading="lazy"
-                                class="lazyload"
+                                src="{{ asset(convert_images.webpConvert2(asset('/assets/images/logo.png'), '')) }}"
                                 alt="{{ get_setting('siteName') }}"
-                                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/logo.png'), '')) }}"
+                                loading="lazy"
                                 width="274"
                                 height="99">
                         </a>
