--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -30,7 +30,12 @@
         <link rel="dns-prefetch" href="//www.gstatic.com" >
         <link rel="preconnect" href="//z.moatads.com" crossorigin>
         <link rel="dns-prefetch" href="//z.moatads.com" >
-        <link rel="dns-prefetch" href="//fonts.googleapis.com" >
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com" >
+        <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+        <link rel="dns-prefetch" href="https://fonts.gstatic.com" >
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="dns-prefetch" href="https://ka-f.fontawesome.com" >
+        <link rel="preconnect" href="https://ka-f.fontawesome.com" crossorigin>
         <link rel="dns-prefetch" href="//www.googletagmanager.com" >
         <link rel="dns-prefetch" href="//v1.addthisedge.com" >
         <link rel="dns-prefetch" href="//m.addthis.com" >
@@ -40,7 +45,6 @@
         <link rel="dns-prefetch" href="//api-public.addthis.com" >
         <link rel="dns-prefetch" href="//scontent-ort2-2.xx.fbcdn.net" >
         <link rel="dns-prefetch" href="//external-ort2-2.xx.fbcdn.net" >
-        <link rel="preconnect" href="https://fonts.gstatic.com">
 
         <!-- https://realfavicongenerator.net -->
         <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('apple-touch-icon.png') }}">
@@ -149,7 +153,7 @@
                 type="text/css"
             />
         </noscript>
-        <script defer fetchpriority="low" src="https://kit.fontawesome.com/6cca6fc4c9.js" crossorigin="anonymous"></script>
+
         <link href="{{ asset('build/css/app.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
         <noscript><link rel="stylesheet" href="{{ asset('build/css/app.css') }}" ></noscript>
         {% block stylesheets %}
