--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -91,7 +91,7 @@
         <div class="row copyright">
             <div class="col-sm-12 text-center">
                 <p>
-                    Copyright © {{ "now"|date('Y') }} <a href="https://xaydungkimanh.com" title="Xây Dựng Kim Anh">Xây Dựng Kim Anh</a>, all rights reserved. <a href="//www.dmca.com/Protection/Status.aspx?ID=84046f70-7f9a-4ad3-b0bb-167751a2b498" title="DMCA.com Protection Status" class="dmca-badge" rel="noreferrer"> <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src ="{{ asset(convert_images.webpConvert2(asset('/assets/images/dmca.png'), '')) }}"  alt="DMCA.com Protection Status" width="109" height="22" /></a>  <script src="{{ asset('assets/libs/dmca/DMCABadgeHelper.min.js') }}"> </script>
+                    Copyright © {{ "now"|date('Y') }} <a href="https://xaydungkimanh.com" title="Xây Dựng Kim Anh">Xây Dựng Kim Anh</a>, all rights reserved. <a href="//www.dmca.com/Protection/Status.aspx?ID=84046f70-7f9a-4ad3-b0bb-167751a2b498" title="DMCA.com Protection Status" class="dmca-badge" rel="noreferrer"> <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src ="{{ asset(convert_images.webpConvert2(asset('/assets/images/dmca.png'), '')) }}"  alt="DMCA.com Protection Status" width="109" height="22" /></a>  <script defer fetchpriority="low" src="{{ asset('assets/libs/dmca/DMCABadgeHelper.min.js') }}"> </script>
                 </p>
             </div>
         </div>
