--- a/web/assets/scss/front/global/_sidebar.scss
+++ b/web/assets/scss/front/global/_sidebar.scss
@@ -66,6 +66,12 @@
                 border: 1px solid $mercury;
             }
 
+            img.icon-price {
+                margin-top: 5px;
+                margin-right: 5px;
+                border: none;
+            }
+
             span {
                 line-height: 22px;
                 display: -webkit-box;
