--- a/app/Resources/views/news/prices.html.twig
+++ b/app/Resources/views/news/prices.html.twig
@@ -3,26 +3,23 @@
         Bảng giá dịch vụ
     </h3>
     <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi-moi-nhat' }) }}" class="list-group-item td-list-group-item item-price" title="Đơn giá xây nhà trọn gói">
-        <i class="fas fa-hand-point-right"></i><span>Đơn giá xây nhà trọn gói</span>
+        <img class="icon-price" src="{{ asset(convert_images.webpConvert2(asset('/assets/images/arrow.png'), '')) }}" alt="{{ get_setting('siteName') }}" width="17" height="17" />
+        <span>Đơn giá xây nhà trọn gói</span>
     </a>
     <a href="{{ path('news_show', {'slug': 'bao-gia-sua-chua-nha-moi-nhat' }) }}" class="list-group-item td-list-group-item item-price" title="Đơn giá sửa nhà trọn gói">
-        <i class="fas fa-hand-point-right"></i><span>Đơn giá sửa nhà trọn gói</span>
+        <img class="icon-price" src="{{ asset(convert_images.webpConvert2(asset('/assets/images/arrow.png'), '')) }}" alt="{{ get_setting('siteName') }}" width="17" height="17" />
+        <span>Đơn giá sửa nhà trọn gói</span>
     </a>
     <a href="{{ path('news_show', {'slug': 'bang-bao-gia-xay-nha-phan-tho-moi-nhat' }) }}" class="list-group-item td-list-group-item item-price" title="Đơn giá xây nhà phần thô">
-        <i class="fas fa-hand-point-right"></i><span>Đơn giá xây nhà phần thô</span>
+        <img class="icon-price" src="{{ asset(convert_images.webpConvert2(asset('/assets/images/arrow.png'), '')) }}" alt="{{ get_setting('siteName') }}" width="17" height="17" />
+        <span>Đơn giá xây nhà phần thô</span>
     </a>
     <a href="{{ path('news_show', {'slug': 'bang-gia-thiet-ke-nha-pho-tai-tphcm' }) }}" class="list-group-item td-list-group-item item-price" title="Đơn giá thiết kế nhà phố">
-        <i class="fas fa-hand-point-right"></i><span>Đơn giá thiết kế nhà phố</span>
+        <img class="icon-price" src="{{ asset(convert_images.webpConvert2(asset('/assets/images/arrow.png'), '')) }}" alt="{{ get_setting('siteName') }}" width="17" height="17" />
+        <span>Đơn giá thiết kế nhà phố</span>
     </a>
     <a href="{{ path('news_show', {'slug': 'bang-don-gia-xay-dung-nha-xuong' }) }}" class="list-group-item td-list-group-item item-price" title="Đơn giá xây nhà xưởng">
-        <i class="fas fa-hand-point-right"></i><span>Đơn giá xây nhà xưởng</span>
+        <img class="icon-price" src="{{ asset(convert_images.webpConvert2(asset('/assets/images/arrow.png'), '')) }}" alt="{{ get_setting('siteName') }}" width="17" height="17" />
+        <span>Đơn giá xây nhà xưởng</span>
     </a>
-    <!--
-    <a href="{{ path('news_show', {'slug': 'gia-ep-coc-be-tong-cot-thep-tai-tphcm' }) }}" class="list-group-item td-list-group-item item-price" title="Đơn giá ép cọc bê tông">
-        <i class="fas fa-hand-point-right"></i><span>Đơn giá ép cọc bê tông</span>
-    </a>
-    <a href="{{ path('news_show', {'slug': 'don-gia-thi-cong-tran-thach-cao' }) }}" class="list-group-item td-list-group-item item-price" title="Đơn giá trần thạch cao">
-        <i class="fas fa-hand-point-right"></i><span>Đơn giá trần thạch cao</span>
-    </a>
-    -->
 </div>
