--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -15,12 +15,12 @@
 
                         <div class="collapse navbar-collapse" id="navbar-collapse">
                             <ul class="nav navbar-nav">
-                                <li class="first">
+                                {# <li class="first">
                                     <a href="/" class="home" aria-label="Xây Dựng Kim Anh">
                                         <span class="hidden">Trang chủ</span>
                                         <i class="fa fa-home" aria-hidden="true"></i>
                                     </a>
-                                </li>
+                                </li> #}
                                 <li class="dropdown">
                                     <a href="/gioi-thieu.html" class="dropdown-toggle" data-toggle="dropdown">Giới thiệu</a>
                                     <ul class="dropdown-menu menu_level_1">
