--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -243,37 +243,56 @@
                     <h2 class="text-center text-uppercase">Khách hàng đánh giá về Xây Dựng Kim Anh</h2>
                 </div>
                 <div class="row media-wrapper">
-                    <div class="media">
-                        <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/76AB9uOFBos?rel=0&showinfo=0&autoplay=1">
-                            <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                data-src="https://img.youtube.com/vi/76AB9uOFBos/hqdefault.jpg"
-                                async
-                                class="play-youtube-video lazyload"
-                                alt="Khách hàng hạnh phúc chia sẻ về Xây Dựng Kim Anh" 
-                                width="282"
-                                height="212" >
+                    <div class="col-xs-12 col-sm-3 col-md-3">
+                        <div class="media">
+                            <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/76AB9uOFBos?rel=0&showinfo=0&autoplay=1">
+                                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                                    data-src="https://img.youtube.com/vi/76AB9uOFBos/hqdefault.jpg"
+                                    async
+                                    class="play-youtube-video lazyload"
+                                    alt="Khách hàng hạnh phúc chia sẻ về Xây Dựng Kim Anh" 
+                                    width="277"
+                                    height="208" >
+                            </div>
                         </div>
                     </div>
-                    <div class="media">
-                        <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/qZHPIqGX7pA?rel=0&showinfo=0&autoplay=1">
-                            <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                data-src="https://img.youtube.com/vi/qZHPIqGX7pA/hqdefault.jpg"
-                                async
-                                class="play-youtube-video lazyload"
-                                alt="Ý kiến khách hàng về Xây Dựng Kim Anh"
-                                width="282"
-                                height="212" >
+                    <div class="col-xs-12 col-sm-3 col-md-3">
+                        <div class="media">
+                            <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/qZHPIqGX7pA?rel=0&showinfo=0&autoplay=1">
+                                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                                    data-src="https://img.youtube.com/vi/qZHPIqGX7pA/hqdefault.jpg"
+                                    async
+                                    class="play-youtube-video lazyload"
+                                    alt="Ý kiến khách hàng về Xây Dựng Kim Anh"
+                                    width="282"
+                                    height="212" >
+                            </div>
                         </div>
                     </div>
-                    <div class="media">
-                        <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/Jw70fD5eZp4?rel=0&showinfo=0&autoplay=1">
-                            <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                data-src="https://img.youtube.com/vi/Jw70fD5eZp4/hqdefault.jpg"
-                                async
-                                class="play-youtube-video lazyload"
-                                alt="Ý kiến khách hàng về Xây Dựng Kim Anh"
-                                width="282"
-                                height="212" >
+                    <div class="col-xs-12 col-sm-3 col-md-3">
+                        <div class="media">
+                            <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/CsMoN-G_QK8?rel=0&showinfo=0&autoplay=1">
+                                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                                    data-src="http://i3.ytimg.com/vi/CsMoN-G_QK8/hqdefault.jpg"
+                                    async
+                                    class="play-youtube-video lazyload"
+                                    alt="Xây Nhà Quận Bình Tân - Uy Tín Làm Nên Thương Hiệu"
+                                    width="277"
+                                    height="208" >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-3 col-md-3">
+                        <div class="media">
+                            <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/Jw70fD5eZp4?rel=0&showinfo=0&autoplay=1">
+                                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                                    data-src="https://img.youtube.com/vi/Jw70fD5eZp4/hqdefault.jpg"
+                                    async
+                                    class="play-youtube-video lazyload"
+                                    alt="Ý kiến khách hàng về Xây Dựng Kim Anh"
+                                    width="277"
+                                    height="208" >
+                            </div>
                         </div>
                     </div>
                 </div>
