--- a/app/Resources/views/layout/header.html.twig
+++ b/app/Resources/views/layout/header.html.twig
@@ -8,11 +8,11 @@
                 <div class="skew-divider"></div>
                 <div class="header-social-wrapper">
                     <span class="text-left">
-                        <i class="fa fa-phone"></i>
+                        <img src="{{ asset(convert_images.webpConvert2(asset('/assets/images/phone-icon.png'), '')) }}" alt="Liên hệ Xây Dựng Kim Anh" width="14" height="14" />
                         <a href="tel:0974776305">0974.776.305</a>
                     </span>
                     <span class="text-left">
-                        <i class="fa fa-envelope-o"></i>
+                        <img src="{{ asset(convert_images.webpConvert2(asset('/assets/images/email.png'), '')) }}" alt="Liên hệ Xây Dựng Kim Anh" width="14" height="14" />
                         <a href="mailto:xaydungkimanh@gmail.com">xaydungkimanh@gmail.com</a>
                     </span>
                     <a target="_blank" href="{{ get_setting('linkToFacebook') }}" title="Xây Dựng Kim Anh trên Facebook" rel="noreferrer">
