--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -18,7 +18,7 @@
                                 {# <li class="first">
                                     <a href="/" class="home" aria-label="Xây Dựng Kim Anh">
                                         <span class="hidden">Trang chủ</span>
-                                        <i class="fa fa-home" aria-hidden="true"></i>
+                                        <img src="{{ asset(convert_images.webpConvert2(asset('/assets/images/home.png'), '')) }}" alt="Xây Dựng Kim Anh" width="20" height="20" />
                                     </a>
                                 </li> #}
                                 <li class="dropdown">
