--- a/web/assets/scss/front/pages/_news.scss
+++ b/web/assets/scss/front/pages/_news.scss
@@ -26,7 +26,7 @@
 ------------------------------------------------------------------------- */
 .news {
     h1 {
-        font-size: 32px;
+        font-size: 30px;
         line-height: 40px;
         margin: 10px 0 20px 0;
     }
@@ -64,8 +64,12 @@
             color: #0053a5;
         }
 
+        h2 {
+            font-size: 27px;
+        }
+
         h3 {
-            font-size: 25px;
+            font-size: 24px;
         }
 
         blockquote {
