--- a/app/Resources/views/news/components/related.html.twig
+++ b/app/Resources/views/news/components/related.html.twig
@@ -65,7 +65,7 @@
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/76AB9uOFBos?rel=0&showinfo=0&autoplay=1">
                             <img
                                 src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                data-src="https://img.youtube.com/vi/76AB9uOFBos/hqdefault.jpg"
+                                data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/yt-1.jpg'), '')) }}"
                                 width="277"
                                 height="208"
                                 async
@@ -79,7 +79,7 @@
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/qZHPIqGX7pA?rel=0&showinfo=0&autoplay=1">
                             <img
                                 src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                data-src="https://img.youtube.com/vi/qZHPIqGX7pA/hqdefault.jpg"
+                                data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/yt-2.jpg'), '')) }}"
                                 width="277"
                                 height="208"
                                 async
@@ -93,7 +93,7 @@
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/CsMoN-G_QK8?rel=0&showinfo=0&autoplay=1">
                             <img
                                 src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                data-src="http://i3.ytimg.com/vi/CsMoN-G_QK8/hqdefault.jpg"
+                                data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/yt-3.jpg'), '')) }}"
                                 width="277"
                                 height="208"
                                 async
@@ -107,7 +107,7 @@
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/Jw70fD5eZp4?rel=0&showinfo=0&autoplay=1">
                             <img
                                 src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                data-src="https://img.youtube.com/vi/Jw70fD5eZp4/hqdefault.jpg"
+                                data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/yt-4.jpg'), '')) }}"
                                 width="277"
                                 height="208"
                                 async
