--- a/web/assets/scss/front/first.scss
+++ b/web/assets/scss/front/first.scss
@@ -1,8 +1,6 @@
 @import "global/fonts";
 
 #nav {
-    overflow: hidden;
-
     @media only screen and (min-width: 979.98px) {
         max-height: 47px;
     }
@@ -35,4 +33,8 @@
         max-height: 50px;
         overflow: hidden;
     }
+}
+
+.related-news .row .related-wrapper .related-img {
+    position: relative;
 }
