--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -1,4 +1,4 @@
-<div id="nav">
+<div id="nav" style="overflow: hidden;">
     <div class="nav-container">
         <div class="container">
             <div class="row">
