--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -139,6 +139,13 @@
             }
         </script>
         <!-- End Google Tag Manager -->
+        <link rel="preload" href="/build/fonts/ieVl2ZhZI2eCN5jzbjEETS9weq8-19-7DRs5.woff2" crossorigin="anonymous" as="font" type="font/woff2">
+        <link rel="preload" href="/build/fonts/ieVl2ZhZI2eCN5jzbjEETS9weq8-19a7DRs5.woff2" crossorigin="anonymous" as="font" type="font/woff2">
+        <link rel="preload" href="/build/fonts/ieVl2ZhZI2eCN5jzbjEETS9weq8-19G7DRs5.woff2" crossorigin="anonymous" as="font" type="font/woff2">
+        <link rel="preload" href="/build/fonts/ieVl2ZhZI2eCN5jzbjEETS9weq8-19K7DQ.woff2" crossorigin="anonymous" as="font" type="font/woff2">
+        <link rel="preload" href="/build/fonts/ieVl2ZhZI2eCN5jzbjEETS9weq8-19y7DRs5.woff2" crossorigin="anonymous" as="font" type="font/woff2">
+        <link rel="preload" href="/build/fonts/ieVl2ZhZI2eCN5jzbjEETS9weq8-1927DRs5.woff2" crossorigin="anonymous" as="font" type="font/woff2">
+        <link rel="preload" href="/build/fonts/ieVl2ZhZI2eCN5jzbjEETS9weq8-1967DRs5.woff2" crossorigin="anonymous" as="font" type="font/woff2">
         <!-- Custom css -->
         <style type="text/css">
             {{ source('@web/css/first.css', ignore_missing = true) }}
