--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -27,6 +27,9 @@
                                         <li class="first">
                                             <a href="/gioi-thieu.html">Về chúng tôi</a>
                                         </li>
+                                        <li class="">
+                                            <a href="/ho-so-nang-luc.html">Hồ sơ năng lực</a>
+                                        </li>
                                         <li class="last">
                                             <a href="/tuyen-dung-kien-truc-su-xay-dung.html">Tuyển dụng</a>
                                         </li>
