--- a/app/Resources/views/news/page.html.twig
+++ b/app/Resources/views/news/page.html.twig
@@ -28,7 +28,7 @@
             {# Side bar #}
             {{ include('layout/sidebar.html.twig') }}
             
-            <div class="col-12 col-md-12 col-lg-9">
+            <div class="col-12 col-md-12 col-lg-9 page-detail-container">
                 {# breadcrumbs #}
                 {{ include('news/components/breadcrumbs.html.twig') }}
 
