--- a/app/Resources/views/news/page.html.twig
+++ b/app/Resources/views/news/page.html.twig
@@ -40,10 +40,10 @@
                     </div>
 
                     {# Rating and Share #}
-                    <div class="rating-share-container">
+                    {# <div class="rating-share-container">
                         {{ include('news/rating/rating.html.twig') }}
-                        {# {{ include('news/components/share.html.twig') }} #}
-                    </div>
+                        {{ include('news/components/share.html.twig') }}
+                    </div> #}
 
                     {# List comments #}
                     {# {{ include('news/comments/list.html.twig') }} #}
