--- a/app/Resources/views/news/search.html.twig
+++ b/app/Resources/views/news/search.html.twig
@@ -8,12 +8,27 @@
 {% block title %}{{ 'post.archives.title'|trans({'%title%': q, '%currentPage%': pagination.currentPageNumber, '%totalPage%': pagination.pageCount}) }}{% endblock %}
 
 {% block structuredOpenGraph %}
-<meta property="og:type" content="object" />
-<meta property="og:title" content="{{ 'post.archives.title'|trans({'%title%': q, '%currentPage%': pagination.currentPageNumber, '%totalPage%': pagination.pageCount}) }}" />
+    <meta property="og:type" content="object" />
+    <meta property="og:title" content="{{ 'post.archives.title'|trans({'%title%': q, '%currentPage%': pagination.currentPageNumber, '%totalPage%': pagination.pageCount}) }}" />
+    {% if pagination.currentPageNumber == 1 and pagination.pageCount > 1 %}
+        <link rel="next" href="{{ baseUrl ~ '&page=' ~ (pagination.currentPageNumber + 1) }}" />
+    {% endif %}
+    {% if pagination.currentPageNumber > 1 and pagination.currentPageNumber < pagination.pageCount %}
+        <link rel="prev" href="{{ baseUrl ~ '&page=' ~ (pagination.currentPageNumber - 1) }}" />
+        <link rel="next" href="{{ baseUrl ~ '&page=' ~ (pagination.currentPageNumber + 1) }}" />
+    {% endif %}
+    {% if pagination.currentPageNumber == pagination.pageCount and pagination.pageCount > 1 %}
+        <link rel="prev" href="{{ baseUrl ~ '&page=' ~ (pagination.currentPageNumber - 1) }}" />
+    {% endif %}
 {% endblock %}
 
 {% block robots %}
-<meta name="robots" content="noindex,nofollow" />
+<meta name="robots" content="noindex,follow" />
+{% endblock %}
+
+{% block canonical %}
+    <meta name="DC.identifier" content="{{ baseUrl }}">
+    <link rel="canonical" href="{{ baseUrl }}"/>
 {% endblock %}
 
 {% block body %}
