--- a/app/Resources/views/layout/footer_UI.html.twig
+++ b/app/Resources/views/layout/footer_UI.html.twig
@@ -1,8 +1,8 @@
 <!-- Custom JS -->
-<script defer fetchpriority="low" src="{{ asset('build/manifest.js') }}"></script>
-<script defer fetchpriority="low" src="{{ asset('build/js/common.js') }}"></script>
-<script defer fetchpriority="low" src="{{ asset('build/js/app.js') }}"></script>
+<script defer fetchpriority="low" src="{{ absolute_url(asset('build/manifest.js')) }}"></script>
+<script defer fetchpriority="low" src="{{ absolute_url(asset('build/js/common.js')) }}"></script>
+<script defer fetchpriority="low" src="{{ absolute_url(asset('build/js/app.js')) }}"></script>
 <script defer fetchpriority="low" src="https://kit.fontawesome.com/6cca6fc4c9.js" crossorigin="anonymous"></script>
-<script defer fetchpriority="low" src="{{ asset('assets/libs/lazyload/js/lazysizes.min.js') }}" async></script>
+<script defer fetchpriority="low" src="{{ absolute_url(asset('assets/libs/lazyload/js/lazysizes.min.js')) }}" async></script>
 
 {# <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51488205306afdd5" async="async"></script> #}
