--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'layout.html.twig' %}
 
 {% block stylesheets %}
-    <link href="{{ asset('build/css/homepage.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
-    <link href="{{ asset('build/css/new.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
-    <noscript><link rel="stylesheet" href="{{ asset('build/css/homepage.css') }}" ></noscript>
-    <noscript><link rel="stylesheet" href="{{ asset('build/css/new.css') }}" ></noscript>
+    <link href="{{ absolute_url(asset('build/css/homepage.css')) }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
+    <link href="{{ absolute_url(asset('build/css/new.css')) }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
+    <noscript><link rel="stylesheet" href="{{ absolute_url(asset('build/css/homepage.css')) }}" ></noscript>
+    <noscript><link rel="stylesheet" href="{{ absolute_url(asset('build/css/new.css')) }}" ></noscript>
 {% endblock %}
 
 {% block structuredOpenGraph %}
