--- a/app/Resources/views/news/show.html.twig
+++ b/app/Resources/views/news/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'layout.html.twig' %}
 
 {% block stylesheets %}
-    <link href="{{ asset('build/css/news.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
-    <link href="{{ asset('build/css/new.css?v=') ~ date().timestamp }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
-    <noscript><link rel="stylesheet" href="{{ asset('build/css/news.css') }}" ></noscript>
-    <noscript><link rel="stylesheet" href="{{ asset('build/css/new.css?v=') ~ date().timestamp }}" ></noscript>
+    <link href="{{ absolute_url(asset('build/css/news.css')) }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
+    <link href="{{ absolute_url(asset('build/css/new.css?v=')) ~ date().timestamp }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
+    <noscript><link rel="stylesheet" href="{{ absolute_url(asset('build/css/news.css')) }}" ></noscript>
+    <noscript><link rel="stylesheet" href="{{ absolute_url(asset('build/css/new.css?v=')) ~ date().timestamp }}" ></noscript>
 {% endblock %}
 
 {% block title %}{{ post.getPageTitle() is not null ? post.getPageTitle() : post.getTitle() }}{% endblock %}
