--- a/app/Resources/views/news/tags.html.twig
+++ b/app/Resources/views/news/tags.html.twig
@@ -1,8 +1,8 @@
 {% extends 'layout.html.twig' %}
 
 {% block stylesheets %}
-    <link href="{{ asset('build/css/list.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
-    <noscript><link rel="stylesheet" href="{{ asset('build/css/list.css') }}" ></noscript>
+    <link href="{{ absolute_url(asset('build/css/list.css')) }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
+    <noscript><link rel="stylesheet" href="{{ absolute_url(asset('build/css/list.css')) }}" ></noscript>
 {% endblock %}
 
 {% block title %}{{ 'post.archives.title'|trans({'%title%': tag.getPageTitle() is not null ? tag.getPageTitle() : tag.getName(), '%currentPage%': pagination.currentPageNumber, '%totalPage%': pagination.pageCount}) }}{% endblock %}
