--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ app.request.locale }}">
+<html lang="vi-VN">
     <head>
         <title>{% block title %}{{ get_setting('pageTitle') }}{% endblock %}</title>
         <meta name="description" content="{% block description %}{{ get_setting('pageDescription') }}{% endblock %}">
