--- a/app/Resources/WhiteOctoberBreadcrumbsBundle/views/microdata.html.twig
+++ b/app/Resources/WhiteOctoberBreadcrumbsBundle/views/microdata.html.twig
@@ -1,8 +1,8 @@
 {% if wo_breadcrumbs()|length %}
     {%- spaceless -%}
-        <ol id="{{ listId }}" class="{{ listClass }}" itemscope itemtype="http://schema.org/BreadcrumbList">
+        <ol id="{{ listId }}" class="{{ listClass }}" itemscope itemtype="https://schema.org/BreadcrumbList">
             {% for b in breadcrumbs %}
-                <li{% if itemClass is defined and itemClass|length %} class="{{ itemClass }}"{% endif %} itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+                <li{% if itemClass is defined and itemClass|length %} class="{{ itemClass }}"{% endif %} itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
                     {% if b.url and not loop.last %}
                     <a href="{{ b.url }}" itemprop="item"{% if linkRel is defined and linkRel|length %} rel="{{ linkRel }}"{% endif %}>
                         {% endif %}
