--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -16,7 +16,7 @@
 {% block structuredOrganization %}
     <script type="application/ld+json">
     {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "Organization",
         "url": "https://xaydungkimanh.com/",
         "logo": "https://xaydungkimanh.com/assets/images/logo.png",
@@ -32,7 +32,7 @@
 {% block structuredWebSite %}
     <script type="application/ld+json">
     {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Xây Dựng Kim Anh",
         "url": "https://xaydungkimanh.com/",
@@ -247,7 +247,7 @@
                         <div class="media">
                             <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/76AB9uOFBos?rel=0&showinfo=0&autoplay=1">
                                 <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                    data-src="https://img.youtube.com/vi/76AB9uOFBos/hqdefault.jpg"
+                                    data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/yt-1.jpg'), '')) }}"
                                     async
                                     class="play-youtube-video lazyload"
                                     alt="Khách hàng hạnh phúc chia sẻ về Xây Dựng Kim Anh" 
@@ -260,7 +260,7 @@
                         <div class="media">
                             <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/qZHPIqGX7pA?rel=0&showinfo=0&autoplay=1">
                                 <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                    data-src="https://img.youtube.com/vi/qZHPIqGX7pA/hqdefault.jpg"
+                                    data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/yt-2.jpg'), '')) }}"
                                     async
                                     class="play-youtube-video lazyload"
                                     alt="Ý kiến khách hàng về Xây Dựng Kim Anh"
@@ -273,7 +273,7 @@
                         <div class="media">
                             <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/CsMoN-G_QK8?rel=0&showinfo=0&autoplay=1">
                                 <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                    data-src="http://i3.ytimg.com/vi/CsMoN-G_QK8/hqdefault.jpg"
+                                    data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/yt-3.jpg'), '')) }}"
                                     async
                                     class="play-youtube-video lazyload"
                                     alt="Xây Nhà Quận Bình Tân - Uy Tín Làm Nên Thương Hiệu"
@@ -286,7 +286,7 @@
                         <div class="media">
                             <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/Jw70fD5eZp4?rel=0&showinfo=0&autoplay=1">
                                 <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                    data-src="https://img.youtube.com/vi/Jw70fD5eZp4/hqdefault.jpg"
+                                    data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/yt-4.jpg'), '')) }}"
                                     async
                                     class="play-youtube-video lazyload"
                                     alt="Ý kiến khách hàng về Xây Dựng Kim Anh"
