--- a/app/Resources/views/news/search.html.twig
+++ b/app/Resources/views/news/search.html.twig
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block robots %}
-<meta name="robots" content="noindex,follow" />
+<meta name="robots" content="noindex, nofollow" />
 {% endblock %}
 
 {% block canonical %}
