--- a/web/assets/scss/front/pages/_news.scss
+++ b/web/assets/scss/front/pages/_news.scss
@@ -69,7 +69,11 @@
         }
 
         h3 {
-            font-size: 24px;
+            font-size: 20px;
+        }
+
+        h4 {
+            font-size: 16px;
         }
 
         blockquote {
